Agrego la seccion de Nuevos productos

--- a/index.html
+++ b/index.html
@@ -47,11 +47,31 @@
             <h2>Mirá lo Nuevo</h2>
         </div>
         <div class="newProducts__catalogue">
-            <img src="assets/img/products/casco1.webp" alt="Casco Negro LS2">
-            <img src="assets/img/products/campera1.webp" alt="Campera Negra Rompevientos">
-            <img src="assets/img/products/botas1.webp" alt="Botas de Motocicleta">
-            <img src="assets/img/products/casco2.webp" alt="Casco Negro">
-            <img src="assets/img/products/campera2.webp" alt="Campera Negra con Proteccion">
+            <div class="catalogue__product">
+                <img src="assets/img/products/casco1.webp" alt="Casco Negro LS2">
+                <span>$5000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
+            <div class="catalogue__product">
+                <img src="assets/img/products/campera1.webp" alt="Campera Negra Rompevientos">
+                <span>$5000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
+            <div class="catalogue__product">
+                <img src="assets/img/products/botas1.webp" alt="Botas de Motocicleta">
+                <span>$5000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
+            <div class="catalogue__product">
+                <img src="assets/img/products/casco2.webp" alt="Casco Negro">
+                <span>$5000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
+            <div class="catalogue__product">
+                <img src="assets/img/products/campera2.webp" alt="Campera Negra con Proteccion">
+                <span>$5000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
         </div>
     </section>
 </body>
