Agrego el banner, corrijo cosas y la Galeria

--- a/index.html
+++ b/index.html
@@ -49,28 +49,51 @@
         <div class="newProducts__catalogue">
             <div class="catalogue__product">
                 <img src="assets/img/products/casco1.webp" alt="Casco Negro LS2">
-                <span>$5000.00</span>
+                <span>$10000.00</span>
                 <button class="transition">Agregar al Carrito</button>
             </div>
             <div class="catalogue__product">
                 <img src="assets/img/products/campera1.webp" alt="Campera Negra Rompevientos">
-                <span>$5000.00</span>
+                <span>$18000.00</span>
                 <button class="transition">Agregar al Carrito</button>
             </div>
             <div class="catalogue__product">
-                <img src="assets/img/products/botas1.webp" alt="Botas de Motocicleta">
+                <img src="assets/img/products/guantes.webp" alt="Botas de Motocicleta">
                 <span>$5000.00</span>
                 <button class="transition">Agregar al Carrito</button>
             </div>
             <div class="catalogue__product">
                 <img src="assets/img/products/casco2.webp" alt="Casco Negro">
-                <span>$5000.00</span>
+                <span>$9000.00</span>
                 <button class="transition">Agregar al Carrito</button>
             </div>
             <div class="catalogue__product">
                 <img src="assets/img/products/campera2.webp" alt="Campera Negra con Proteccion">
-                <span>$5000.00</span>
+                <span>$25000.00</span>
                 <button class="transition">Agregar al Carrito</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- BANNER -->
+    <section class="bannerDescuento">
+        <div class="bannerItem"></div>
+    </section>
+
+    <!-- GALERIA -->
+    <section class="galeriaProductos">
+        <div class="galeriaProductos__container">
+            <div class="container__item1 container_items transition">
+                <img src="assets/img/products/aceite.webp" alt="Aceite para Moto">
+                <span>Aceites</span>
+            </div>
+            <div class="container__item2 container_items transition">
+                <img src="assets/img/products/slime.webp" alt="Slime">
+                <span>Slime</span>
+            </div>
+            <div class="container__item3 container_items transition">
+                <img src="assets/img/products/mochila.webp" alt="Mochila Negra">
+                <span>Mochilas</span>
             </div>
         </div>
     </section>
