--- a/index.html
+++ b/index.html
@@ -97,5 +97,73 @@
             </div>
         </div>
     </section>
+
+    <!-- PRODUCTOS -->
+    <section class="newProducts">
+        <div class="newProducts__title">
+            <h2>Nuestros Productos</h2>
+        </div>
+        <div class="newProducts__catalogue">
+            <div class="catalogue__product">
+                <img src="assets/img/products/casco1.webp" alt="Casco Negro LS2">
+                <span>$10000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
+
+            <div class="catalogue__product">
+                <img src="assets/img/products/campera1.webp" alt="Campera Negra Rompevientos">
+                <span>$18000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
+
+            <div class="catalogue__product">
+                <img src="assets/img/products/guantes.webp" alt="Botas de Motocicleta">
+                <span>$5000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
+
+            <div class="catalogue__product">
+                <img src="assets/img/products/casco2.webp" alt="Casco Negro">
+                <span>$9000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
+
+            <div class="catalogue__product">
+                <img src="assets/img/products/campera2.webp" alt="Campera Negra con Proteccion">
+                <span>$25000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
+
+            <div class="catalogue__product">
+                <img src="assets/img/products/casco1.webp" alt="Casco Negro LS2">
+                <span>$10000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
+
+            <div class="catalogue__product">
+                <img src="assets/img/products/campera1.webp" alt="Campera Negra Rompevientos">
+                <span>$18000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
+
+            <div class="catalogue__product">
+                <img src="assets/img/products/guantes.webp" alt="Botas de Motocicleta">
+                <span>$5000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
+
+            <div class="catalogue__product">
+                <img src="assets/img/products/casco2.webp" alt="Casco Negro">
+                <span>$9000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
+
+            <div class="catalogue__product">
+                <img src="assets/img/products/campera2.webp" alt="Campera Negra con Proteccion">
+                <span>$25000.00</span>
+                <button class="transition">Agregar al Carrito</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
