--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/logo/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/logo/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/logo/favicon-32x32.webp">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/logo/favicon-16x16.webp">
     <title>MotorStore</title>
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/main.js"></script>
@@ -15,7 +15,7 @@
     <header>
         <div class="navbar">
             <div class="headerLogo">
-                <img src="assets/logo/logoDark.png" alt="Logo de MotorStore">
+                <img src="assets/logo/logoDark.webp" alt="Logo de MotorStore">
             </div>
             <nav id="nav" class="transition">
                 <ul>
