Agrego el Listado de Productos en una Tabla

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h1>MotorStore</h1>
                 <p>Los Mejores Artículos para tu Motocicleta</p>
                 <div class="btnInicio">
-                    <a class="mostrarProductos transition" href="#">Mostrar Productos</a>
+                    <a id="mostrarProductos" class="mostrarProductos transition" href="#">Mostrar Listado</a>
                     <a class="comprarBtn transition" href="#">Nuevo Producto</a>
                 </div>
             </div>
@@ -84,6 +84,26 @@
                     <span>$10.00</span>
                     <button class="btnAgregarCarrito transition">Agregar al Carrito</button>
                 </div>
+            </div>
+        </section>
+
+        <!-- TABLA DE PRODUCTOS -->
+        <section id="tablaProductos" class="tablaProductos">
+            <div class="tableContainer">
+                <svg id="closeTable" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="Menu / Close_MD"> <path id="Vector" d="M18 18L12 12M12 12L6 6M12 12L18 6M12 12L6 18" stroke="#FFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g> </g></svg>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>NOMBRE</th>
+                            <th>PRECIO</th>
+                            <th>STOCK</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        
+                    </tbody>
+                </table>
             </div>
         </section>
     </main>
