Soluciono un bug y agrego la funcion de buscar por ID

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 <p>Los Mejores Artículos para tu Motocicleta</p>
                 <div class="btnInicio">
                     <a id="mostrarProductos" class="mostrarProductos transition" href="#">Mostrar Listado</a>
-                    <a class="comprarBtn transition" href="#">Nuevo Producto</a>
+                    <a class="agregarProducto transition" href="#">Nuevo Producto</a>
+                    <a class="buscarProducto transition" href="#">Buscar Producto</a>
                 </div>
             </div>
         </section>
@@ -97,6 +98,7 @@
                             <th>ID</th>
                             <th>NOMBRE</th>
                             <th>PRECIO</th>
+                            <th>+ IVA</th>
                             <th>STOCK</th>
                         </tr>
                     </thead>
