Funcion de tabla en el carrito

--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
                 <h1>MotorStore</h1>
                 <p>Los Mejores Artículos para tu Motocicleta</p>
                 <div class="btnInicio">
-                    <a id="mostrarProductos" class="mostrarProductos transition" href="#">Mostrar Listado</a>
-                    <a class="agregarProducto transition" href="#">Nuevo Producto</a>
-                    <a class="buscarProducto transition" href="#">Buscar Producto</a>
+                    <a class="verProductos transition" href="#productos">Ver Productos</a>
                 </div>
             </div>
         </section>
@@ -54,6 +52,16 @@
         <!-- BANNER -->
         <section class="bannerDescuento">
             <div class="bannerItem"></div>
+        </section>
+
+        <!-- MENU ADMIN -->
+        <section class="sectionAdmin">
+            <h3>Menu Admin (Prueba)</h3>
+            <div class="menuAdmin">
+                <a id="mostrarProductos" class="mostrarProductos transition" href="#">Mostrar Listado</a>
+                <a class="agregarProducto transition" href="#">Nuevo Producto</a>
+                <a class="buscarProducto transition" href="#">Buscar Producto</a>
+            </div>
         </section>
 
         <!-- GALERIA -->
@@ -75,7 +83,7 @@
         </section>
 
         <!-- NEW PRODUCTS -->
-        <section class="newProducts">
+        <section id="productos" class="newProducts">
             <div class="newProducts__title">
                 <h2>Nuestros Productos</h2>
             </div>
@@ -103,6 +111,25 @@
                         </tr>
                     </thead>
                     <tbody>
+                        
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <!-- TABLA DEL CARRITO -->
+        <section id="tablaCarrito" class="tablaProductos">
+            <div class="tableContainer">
+                <svg id="closeTableCart" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="Menu / Close_MD"> <path id="Vector" d="M18 18L12 12M12 12L6 6M12 12L18 6M12 12L6 18" stroke="#FFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g> </g></svg>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>NOMBRE</th>
+                            <th>PRECIO CON IVA</th>
+                        </tr>
+                    </thead>
+                    <tbody class="tCarrito">
                         
                     </tbody>
                 </table>
