Agrego el boton agregar por ID

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 <a id="mostrarProductos" class="mostrarProductos transition" href="#">Mostrar Listado</a>
                 <a class="agregarProducto transition" href="#">Nuevo Producto</a>
                 <a class="buscarProducto transition" href="#">Buscar Producto</a>
+                <a class="agregarCarrito transition" href="#">Agregar por ID</a>
             </div>
         </section>
 
