--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -9,28 +9,28 @@
     <title>MotorStore</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!-- JS -->
-    <script defer src="js/nav.js"></script>
-    <script defer src="js/variables.js"></script>
-    <script defer src="js/main.js"></script>
+    <script defer src="../js/nav.js"></script>
+    <script defer src="../js/variables.js"></script>
+    <script defer src="../js/main.js"></script>
+    <script defer src="../js/carrito.js"></script>
 
     <!-- LIBRERÍAS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-
 </head>
 <body>
     <!-- NAVBAR -->
     <header>
         <div class="navbar">
             <div class="headerLogo">
-                <a href="index.html"><img src="assets/logo/logoDark.webp" alt="Logo de MotorStore"></a>
+                <a href="../index.html"><img src="../assets/logo/logoDark.webp" alt="Logo de MotorStore"></a>
             </div>
             <nav id="nav" class="transition">
                 <ul>
                     <li><a class="transition" href="#"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="matrix(-1, 0, 0, 1, 0, 0)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M8 10H8.01" stroke="#1c1c1c" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M12 10H12.01" stroke="#1c1c1c" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M16 10H16.01" stroke="#1c1c1c" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M21 13V7C21 5.11438 21 4.17157 20.4142 3.58579C19.8284 3 18.8856 3 17 3H7C5.11438 3 4.17157 3 3.58579 3.58579C3 4.17157 3 5.11438 3 7V13C3 14.8856 3 15.8284 3.58579 16.4142C4.17157 17 5.11438 17 7 17H7.5C7.77614 17 8 17.2239 8 17.5V20V20.1499C8 20.5037 8.40137 20.7081 8.6875 20.5L13.0956 17.2941C13.3584 17.103 13.675 17 14 17H17C18.8856 17 19.8284 17 20.4142 16.4142C21 15.8284 21 14.8856 21 13Z" stroke="#1c1c1c" stroke-width="2" stroke-linejoin="round"></path> </g></svg>Ayuda</a></li>
                     <li><a class="transition" href="#"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <rect width="24" height="24" fill="white"></rect> <path fill-rule="evenodd" clip-rule="evenodd" d="M6 8C6 4.68629 8.68629 2 12 2C15.3137 2 18 4.68629 18 8C18 11.3137 15.3137 14 12 14C8.68629 14 6 11.3137 6 8Z" fill="#1c1c1c"></path> <path fill-rule="evenodd" clip-rule="evenodd" d="M5.43094 16.9025C7.05587 16.2213 9.2233 16 12 16C14.771 16 16.9351 16.2204 18.5586 16.8981C20.3012 17.6255 21.3708 18.8613 21.941 20.6587C22.1528 21.3267 21.6518 22 20.9592 22H3.03459C2.34482 22 1.84679 21.3297 2.0569 20.6654C2.62537 18.8681 3.69119 17.6318 5.43094 16.9025Z" fill="#1c1c1c"></path> </g></svg>Mi Cuenta</a></li>
-                    <li><a id="carrito" class="transition" href="pages/carrito.html"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4.78571 5H18.2251C19.5903 5 20.5542 6.33739 20.1225 7.63246L18.4558 12.6325C18.1836 13.4491 17.4193 14 16.5585 14H6.07142M4.78571 5L4.74531 4.71716C4.60455 3.73186 3.76071 3 2.76541 3H2M4.78571 5L6.07142 14M6.07142 14L6.25469 15.2828C6.39545 16.2681 7.23929 17 8.23459 17H17M17 17C15.8954 17 15 17.8954 15 19C15 20.1046 15.8954 21 17 21C18.1046 21 19 20.1046 19 19C19 17.8954 18.1046 17 17 17ZM11 19C11 20.1046 10.1046 21 9 21C7.89543 21 7 20.1046 7 19C7 17.8954 7.89543 17 9 17C10.1046 17 11 17.8954 11 19Z" stroke="#1c1c1c" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg><span class="carritoNumber">0</span>Carrito</a></li>
+                    <li><a id="carrito" class="transition" href="carrito.html"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4.78571 5H18.2251C19.5903 5 20.5542 6.33739 20.1225 7.63246L18.4558 12.6325C18.1836 13.4491 17.4193 14 16.5585 14H6.07142M4.78571 5L4.74531 4.71716C4.60455 3.73186 3.76071 3 2.76541 3H2M4.78571 5L6.07142 14M6.07142 14L6.25469 15.2828C6.39545 16.2681 7.23929 17 8.23459 17H17M17 17C15.8954 17 15 17.8954 15 19C15 20.1046 15.8954 21 17 21C18.1046 21 19 20.1046 19 19C19 17.8954 18.1046 17 17 17ZM11 19C11 20.1046 10.1046 21 9 21C7.89543 21 7 20.1046 7 19C7 17.8954 7.89543 17 9 17C10.1046 17 11 17.8954 11 19Z" stroke="#1c1c1c" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg><span class="carritoNumber">0</span>Carrito</a></li>
                 </ul>
             </nav>
             <svg id="btn-menu" class="menuBurger" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(0)matrix(1, 0, 0, 1, 0, 0)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill-rule="evenodd" clip-rule="evenodd" d="M2 7a1 1 0 0 1 1-1h18a1 1 0 1 1 0 2H3a1 1 0 0 1-1-1zm0 5a1 1 0 0 1 1-1h18a1 1 0 1 1 0 2H3a1 1 0 0 1-1-1zm1 4a1 1 0 1 0 0 2h18a1 1 0 1 0 0-2H3z" fill="#1C1C1C"></path></g></svg>
@@ -38,66 +38,29 @@
     </header>
 
     <main>
-        <!-- BG INICIO -->
-        <section class="bgMoto">
-            <div class="txtInicio">
-                <h1>MotorStore</h1>
-                <p>Los Mejores Artículos para tu Motocicleta</p>
-                <div class="btnInicio">
-                    <a class="verProductos transition" href="#productos">Ver Productos</a>
-                </div>
-            </div>
-        </section>
-
         <!-- WHATSAPP ICON -->
         <div class="whatsappIcon transition">
             <a href="https://api.whatsapp.com/send?phone=5491167274490&text=%C2%A1Hola%21+Estoy+en+la+tienda+MOTO+DELTA+y+quiero+pedir+m%C3%A1s+informaci%C3%B3n."><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M17.6 6.31999C16.8669 5.58141 15.9943 4.99596 15.033 4.59767C14.0716 4.19938 13.0406 3.99622 12 3.99999C10.6089 4.00135 9.24248 4.36819 8.03771 5.06377C6.83294 5.75935 5.83208 6.75926 5.13534 7.96335C4.4386 9.16745 4.07046 10.5335 4.06776 11.9246C4.06507 13.3158 4.42793 14.6832 5.12 15.89L4 20L8.2 18.9C9.35975 19.5452 10.6629 19.8891 11.99 19.9C14.0997 19.9001 16.124 19.0668 17.6222 17.5816C19.1205 16.0965 19.9715 14.0796 19.99 11.97C19.983 10.9173 19.7682 9.87634 19.3581 8.9068C18.948 7.93725 18.3505 7.05819 17.6 6.31999ZM12 18.53C10.8177 18.5308 9.65701 18.213 8.64 17.61L8.4 17.46L5.91 18.12L6.57 15.69L6.41 15.44C5.55925 14.0667 5.24174 12.429 5.51762 10.8372C5.7935 9.24545 6.64361 7.81015 7.9069 6.80322C9.1702 5.79628 10.7589 5.28765 12.3721 5.37368C13.9853 5.4597 15.511 6.13441 16.66 7.26999C17.916 8.49818 18.635 10.1735 18.66 11.93C18.6442 13.6859 17.9355 15.3645 16.6882 16.6006C15.441 17.8366 13.756 18.5301 12 18.53ZM15.61 13.59C15.41 13.49 14.44 13.01 14.26 12.95C14.08 12.89 13.94 12.85 13.81 13.05C13.6144 13.3181 13.404 13.5751 13.18 13.82C13.07 13.96 12.95 13.97 12.75 13.82C11.6097 13.3694 10.6597 12.5394 10.06 11.47C9.85 11.12 10.26 11.14 10.64 10.39C10.6681 10.3359 10.6827 10.2759 10.6827 10.215C10.6827 10.1541 10.6681 10.0941 10.64 10.04C10.64 9.93999 10.19 8.95999 10.03 8.56999C9.87 8.17999 9.71 8.23999 9.58 8.22999H9.19C9.08895 8.23154 8.9894 8.25465 8.898 8.29776C8.8066 8.34087 8.72546 8.403 8.66 8.47999C8.43562 8.69817 8.26061 8.96191 8.14676 9.25343C8.03291 9.54495 7.98287 9.85749 8 10.17C8.0627 10.9181 8.34443 11.6311 8.81 12.22C9.6622 13.4958 10.8301 14.5293 12.2 15.22C12.9185 15.6394 13.7535 15.8148 14.58 15.72C14.8552 15.6654 15.1159 15.5535 15.345 15.3915C15.5742 15.2296 15.7667 15.0212 15.91 14.78C16.0428 14.4856 16.0846 14.1583 16.03 13.84C15.94 13.74 15.81 13.69 15.61 13.59Z" fill="#FFFFFF"></path> </g></svg></a>
         </div>
 
-        <!-- BANNER -->
-        <section class="bannerDescuento">
-            <div class="bannerItem"></div>
-        </section>
-
-        <!-- MENU ADMIN -->
-        <section class="sectionAdmin">
-            <h3>Menu Admin (Prueba)</h3>
-            <div class="menuAdmin">
-                <a class="agregarProducto transition" href="#">Nuevo Producto</a>
-            </div>
-        </section>
-
-        <!-- GALERIA -->
-        <section class="galeriaProductos">
-            <div class="galeriaProductos__container">
-                <div class="container__item1 container_items transition">
-                    <img src="assets/img/products/aceite.webp" alt="Aceite para Moto">
-                    <span>Aceites</span>
+        <!-- TABLA CARRITO -->
+        <section class="carritoSection">
+            <div class="carritoContainer">
+                <h2>Carrito</h2>
+                <div class="carritoProductos">
+                    
                 </div>
-                <div class="container__item2 container_items transition">
-                    <img src="assets/img/products/slime.webp" alt="Slime">
-                    <span>Slime</span>
-                </div>
-                <div class="container__item3 container_items transition">
-                    <img src="assets/img/products/mochila.webp" alt="Mochila Negra">
-                    <span>Mochilas</span>
-                </div>
-            </div>
-        </section>
-
-        <!-- NEW PRODUCTS -->
-        <section id="productos" class="newProducts">
-            <div class="newProducts__title">
-                <h2>Nuestros Productos</h2>
-            </div>
-            <div class="searchProduct">
-                <input type="search" name="" id="inputSearch" placeholder="¿Qué Producto Estabas Buscado?">
-            </div>
-            <div class="newProducts__catalogue">
-                <div class="catalogue__product">
-                    <img src="assets/img/products/casco1.webp" alt="Casco Negro LS2">
-                    <span>$10.00</span>
-                    <button class="btnAgregarCarrito transition">Agregar al Carrito</button>
+                <div class="botonesProductos">
+                    <div class="vaciarCarrito">
+                        <button class="vaciarCarrito">VACIAR CARRITO</button>
+                    </div>
+                    <div class="totalCarrito">
+                        <div class="precioTotal">
+                            <p>TOTAL</p>
+                            <p id="total">$0</p>
+                        </div>
+                        <button class="comprarCarrito">COMPRAR AHORA</button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -107,7 +70,7 @@
     <footer>
         <div class="footerContainer">
             <div class="infoMotor">
-                <img src="assets/logo/logoLight.webp" alt="Logo Claro">
+                <img src="../assets/logo/logoLight.webp" alt="Logo Claro">
                 <p>Tenemos todo lo que buscas, para tu Motocicleta</p>
                 <p>Acá te dejamos nuestra ubicación para que nos visites y encuentres lo que buscas.</p>
                 <div class="linksContainer">
@@ -124,5 +87,6 @@
 
     <!-- LIBRERÍAS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
