agrego una animacion al cargar el carrito

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -48,7 +48,12 @@
             <div class="carritoContainer">
                 <h2>Carrito</h2>
                 <div class="carritoProductos">
-                    
+                    <div class="load-row">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
                 </div>
                 <div class="botonesProductos">
                     <div class="vaciarCarrito">
