Agrego mensajes de error al cargar los productos si no funciona

--- a/index.html
+++ b/index.html
@@ -87,10 +87,9 @@
                 <input type="search" name="" id="inputSearch" placeholder="¿Qué Producto Estabas Buscado?">
             </div>
             <div class="newProducts__catalogue">
-                <div class="catalogue__product">
-                    <img src="assets/img/products/casco1.webp" alt="Casco Negro LS2">
-                    <span>$10.00</span>
-                    <button class="btnAgregarCarrito transition">Agregar al Carrito</button>
+                <div class="errorCarrito">
+                    <h3>⛔ Carrito Vacío</h3>
+                    <p>Debes Agregar productos al Carrito en Nuestra <a href="../index.html">Home</a></p>
                 </div>
             </div>
         </section>
