--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -71,7 +71,7 @@
                                     <input type="radio" name="" id="">Crédito
                                 </div>
                             </div>
-                            <a class="inputComprar">Realizar Compra</button>
+                            <a class="inputComprar">Realizar Compra</a>
                         </form>
                     </div>
                     <div class="infoCompra">
