Soluciono los Radio button

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -66,9 +66,9 @@
                             <div class="paymentInput">
                                 <label for="">Tipo de Pago</label>
                                 <div>
-                                    <input type="radio" name="" id="">Efectivo
-                                    <input type="radio" checked name="" id="">Debito
-                                    <input type="radio" name="" id="">Crédito
+                                    <input type="radio" name="typeBuy" value="Efectivo">Efectivo
+                                    <input type="radio" checked name="typeBuy" value="Debito">Debito
+                                    <input type="radio" name="typeBuy" value="Credito">Crédito
                                 </div>
                             </div>
                             <a class="inputComprar">Realizar Compra</a>
