Agrego la opcion sin stock

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -54,14 +54,14 @@
                         <h3>Datos Personales</h3>
                         <hr>
                         <form action="compraFinal">
-                            <input class="inputEmail" type="email" placeholder="Email" name="" id="">
+                            <input class="inputEmail" type="email" placeholder="Email" value="ejemplo@gmail.com">
                             <div class="nameInputs">
-                                <input class="inputNombre" type="text" placeholder="Nombre">
-                                <input class="inputApellido" type="text" placeholder="Apellido">
+                                <input class="inputNombre" type="text" placeholder="Nombre" value="Coki">
+                                <input class="inputApellido" type="text" placeholder="Apellido" value="Argento">
                             </div>
                             <div class="numInputs">
-                                <input class="inputDNI" type="number" placeholder="DNI" name="" id="">
-                                <input class="inputTelefono" type="number" placeholder="Teléfono" name="" id="">
+                                <input class="inputDNI" type="number" placeholder="DNI" value="46578412">
+                                <input class="inputTelefono" type="number" placeholder="Teléfono" value="1127154585">
                             </div>
                             <div class="paymentInput">
                                 <label for="">Tipo de Pago</label>
