--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <!-- MENU ADMIN -->
         <section id="adminMenu" class="transition adminMenu">
-                <div class="newProductContainer">
+                <div id="newProduct" class="newProductContainer">
                     <h2>Agregar Nuevo Producto</h2>
                     <div class="formProduct">
                         <form action="newProduct">
