--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -54,6 +54,7 @@
                         <span></span>
                         <span></span>
                     </div>
+                    <!-- ACÁ VAN LOS PRODUCTOS -->
                 </div>
                 <div class="botonesProductos">
                     <div class="vaciarCarrito">
