--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -78,7 +78,7 @@
                         <h3>Resumen de Compra</h3>
                         <hr>
                         <div class="resumenCompra">
-                            
+                            <!-- ACÁ VAN LOS PRODUCTOS -->
                         </div>
                         <h5>Total <span id="total">$0</span></h5>
                     </div>
