Soluciono error al cargarProductos

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script defer src="js/nav.js"></script>
     <script defer src="js/variables.js"></script>
     <script defer src="js/main.js"></script>
+    <script defer src="js/cargarProd.js"></script>
 
     <!-- LIBRERÍAS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
