--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -14,6 +14,7 @@
     <script defer src="../js/nav.js"></script>
     <script defer src="../js/variables.js"></script>
     <script defer src="../js/main.js"></script>
+    <script defer src="../js/cargarCarrito.js"></script>
     <script defer src="../js/carrito.js"></script>
 
     <!-- LIBRERÍAS -->
