Corrijo un par de cosas

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -65,8 +65,8 @@
                             <div class="paymentInput">
                                 <label for="">Tipo de Pago</label>
                                 <div>
-                                    <input type="radio" name="typeBuy" value="Efectivo">Efectivo
-                                    <input type="radio" checked name="typeBuy" value="Debito">Debito
+                                    <input type="radio" checked name="typeBuy" value="Efectivo">Efectivo
+                                    <input type="radio" name="typeBuy" value="Debito">Debito
                                     <input type="radio" name="typeBuy" value="Credito">Crédito
                                 </div>
                             </div>
